[metadata]
name             = pyqbdl
author           = Adrien Guinet, Romain Thomas
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.6

[build_ext]
inplace=1
